--- a/sites/arolariu.ro/src/app/domains/invoices/view-invoices/_components/views/InvoicesView.module.scss
+++ b/sites/arolariu.ro/src/app/domains/invoices/view-invoices/_components/views/InvoicesView.module.scss
@@ -69,6 +69,7 @@
 // ===========================================
 .filterIcon {
   @include icon-size(space(4));
+  color: color('foreground');
 }
 
 .sunIcon {
