--- a/sites/arolariu.ro/src/app/domains/invoices/view-scans/_components/ScanSelectionToolbar.module.scss
+++ b/sites/arolariu.ro/src/app/domains/invoices/view-scans/_components/ScanSelectionToolbar.module.scss
@@ -53,11 +53,13 @@
 .clearIcon {
   @include icon-size(space(4));
   margin-right: space(1);
+  color: color('foreground');
 }
 
 .createIcon {
   @include icon-size(space(4));
   margin-right: space(2);
+  color: color('foreground');
 }
 
 .hiddenMobile {
